Adding color scheme and other features:
1. Changed the colour scheme
2. Post job button appears only when the job list is in view

--- a/app/src/main/res/layout-sw600dp/activity_job_list.xml
+++ b/app/src/main/res/layout-sw600dp/activity_job_list.xml
@@ -45,7 +45,7 @@
         android:layout_height="50dp"
         android:text="Post Job"
         android:textColor="@color/white"
-        android:background="@color/teal"
+        android:background="@color/yellow"
         android:textSize="15dp"
         android:textStyle="normal"
         android:typeface="serif"
