--- a/app/src/main/res/layout/dropdown_item.xml
+++ b/app/src/main/res/layout/dropdown_item.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:singleLine="true"
     android:ellipsize="marquee"
-    android:textColor="@color/teal"
+    android:textColor="@color/black"
     android:textSize="15sp"
     android:background="@color/white" >
 </CheckedTextView>
