--- a/app/src/main/res/layout/job_item.xml
+++ b/app/src/main/res/layout/job_item.xml
@@ -46,7 +46,7 @@
             android:id="@+id/jobId"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/teal"
+            android:textColor="@color/black"
             android:gravity="top|left"
             android:layout_gravity="top|left"
             android:layout_margin="5dp"
@@ -58,7 +58,7 @@
             android:id="@+id/user_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/teal"
+            android:textColor="@color/black"
             android:gravity="center|left"
             android:layout_gravity="center|left"
             android:layout_margin="5dp"
@@ -71,7 +71,7 @@
             android:id="@+id/user_phone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/teal"
+            android:textColor="@color/black"
             android:layout_margin="5dp"
             android:layout_marginBottom="5dp"
             android:gravity="bottom|left"
