--- a/app/src/main/res/layout/sp_fragment_job_detail.xml
+++ b/app/src/main/res/layout/sp_fragment_job_detail.xml
@@ -27,13 +27,13 @@
                 android:id="@+id/jobId"
                 android:layout_width="match_parent"
                 android:layout_height="20dp"
-                android:textColor="@color/teal"
-                android:gravity="top|left"
-                android:layout_gravity="top|left"
+                android:textColor="@color/black"
+                android:gravity="center|center"
+                android:layout_gravity="center|center"
                 android:layout_margin="5dp"
                 android:layout_marginBottom="2dp"
                 android:background="@color/white"
-                android:textSize="15dp"
+                android:textSize="10dp"
                 android:textStyle="normal"
                 android:typeface="serif"
                 android:text="@string/job_id" />
@@ -42,44 +42,29 @@
                 android:id="@+id/jobType"
                 android:layout_width="match_parent"
                 android:layout_height="20dp"
-                android:textColor="@color/teal"
-                android:gravity="top|left"
-                android:layout_gravity="top|left"
+                android:textColor="@color/black"
+                android:gravity="center|center"
+                android:layout_gravity="center|center"
                 android:layout_margin="5dp"
                 android:layout_marginBottom="2dp"
                 android:background="@color/white"
-                android:textSize="15dp"
+                android:textSize="10dp"
                 android:textStyle="normal"
                 android:typeface="serif"
                 android:text="@string/job_type" />
-
-            <TextView
-                android:id="@+id/jobStatus"
-                android:layout_width="match_parent"
-                android:layout_height="20dp"
-                android:textColor="@color/teal"
-                android:gravity="top|left"
-                android:layout_gravity="top|left"
-                android:layout_margin="5dp"
-                android:layout_marginBottom="2dp"
-                android:background="@color/white"
-                android:textSize="15dp"
-                android:textStyle="normal"
-                android:typeface="serif"
-                android:text="@string/job_status" />
 
 
             <TextView
                 android:id="@+id/customerName"
                 android:layout_width="match_parent"
                 android:layout_height="20dp"
-                android:textColor="@color/teal"
-                android:gravity="top|left"
-                android:layout_gravity="top|left"
+                android:textColor="@color/black"
+                android:gravity="center|center"
+                android:layout_gravity="center|center"
                 android:layout_margin="5dp"
                 android:layout_marginBottom="2dp"
                 android:background="@color/white"
-                android:textSize="15dp"
+                android:textSize="10dp"
                 android:textStyle="normal"
                 android:typeface="serif"
                 android:text="@string/customer_name" />
@@ -88,13 +73,13 @@
                 android:id="@+id/customerMobileNumber"
                 android:layout_width="match_parent"
                 android:layout_height="20dp"
-                android:textColor="@color/teal"
-                android:gravity="top|left"
-                android:layout_gravity="top|left"
+                android:textColor="@color/black"
+                android:gravity="center|center"
+                android:layout_gravity="center|center"
                 android:layout_margin="5dp"
                 android:layout_marginBottom="2dp"
                 android:background="@color/white"
-                android:textSize="15dp"
+                android:textSize="10dp"
                 android:textStyle="normal"
                 android:typeface="serif"
                 android:text="@string/customer_phone_number" />
@@ -104,13 +89,13 @@
                 android:id="@+id/serviceproviderName"
                 android:layout_width="match_parent"
                 android:layout_height="20dp"
-                android:textColor="@color/teal"
-                android:gravity="top|left"
-                android:layout_gravity="top|left"
+                android:textColor="@color/black"
+                android:gravity="center|center"
+            android:layout_gravity="center|center"
                 android:layout_margin="5dp"
                 android:layout_marginBottom="2dp"
                 android:background="@color/white"
-                android:textSize="15dp"
+                android:textSize="10dp"
                 android:textStyle="normal"
                 android:typeface="serif"
                 android:text="@string/service_provider_name" />
@@ -119,13 +104,13 @@
                 android:id="@+id/serviceProviderMobileNumber"
                 android:layout_width="match_parent"
                 android:layout_height="20dp"
-                android:textColor="@color/teal"
-                android:gravity="top|left"
-                android:layout_gravity="top|left"
+                android:textColor="@color/black"
+                android:gravity="center|center"
+            android:layout_gravity="center|center"
                 android:layout_margin="5dp"
                 android:layout_marginBottom="2dp"
                 android:background="@color/white"
-                android:textSize="15dp"
+                android:textSize="10dp"
                 android:textStyle="normal"
                 android:typeface="serif"
                 android:text="@string/service_provider_phone" />
@@ -135,13 +120,13 @@
                 android:id="@+id/pincode"
                 android:layout_width="match_parent"
                 android:layout_height="20dp"
-                android:textColor="@color/teal"
-                android:gravity="top|left"
-                android:layout_gravity="top|left"
+                android:textColor="@color/black"
+                android:gravity="center|center"
+                android:layout_gravity="center|center"
                 android:layout_margin="5dp"
                 android:layout_marginBottom="2dp"
                 android:background="@color/white"
-                android:textSize="15dp"
+                android:textSize="10dp"
                 android:textStyle="normal"
                 android:typeface="serif"
                 android:text="@string/pincode" />
@@ -150,13 +135,13 @@
                 android:id="@+id/dateinitiated"
                 android:layout_width="match_parent"
                 android:layout_height="20dp"
-                android:textColor="@color/teal"
-                android:gravity="top|left"
-                android:layout_gravity="top|left"
+                android:textColor="@color/black"
+                android:gravity="center|center"
+                android:layout_gravity="center|center"
                 android:layout_margin="5dp"
                 android:layout_marginBottom="2dp"
                 android:background="@color/white"
-                android:textSize="15dp"
+                android:textSize="10dp"
                 android:textStyle="normal"
                 android:typeface="serif"
                 android:text="@string/date_initiated" />
@@ -165,13 +150,13 @@
                 android:id="@+id/customer_preferred_date"
                 android:layout_width="match_parent"
                 android:layout_height="20dp"
-                android:textColor="@color/teal"
-                android:gravity="top|left"
-                android:layout_gravity="top|left"
+                android:textColor="@color/black"
+                android:gravity="center|center"
+                android:layout_gravity="center|center"
                 android:layout_margin="5dp"
                 android:layout_marginBottom="2dp"
                 android:background="@color/white"
-                android:textSize="15dp"
+                android:textSize="10dp"
                 android:textStyle="normal"
                 android:typeface="serif"
                 android:text="@string/customer_preferred_date" />
@@ -180,13 +165,13 @@
             android:id="@+id/daySegment"
             android:layout_width="match_parent"
             android:layout_height="20dp"
-            android:textColor="@color/teal"
-            android:gravity="top|left"
-            android:layout_gravity="top|left"
+            android:textColor="@color/black"
+            android:gravity="center|center"
+            android:layout_gravity="center|center"
             android:layout_margin="5dp"
             android:layout_marginBottom="2dp"
             android:background="@color/white"
-            android:textSize="15dp"
+            android:textSize="10dp"
             android:textStyle="normal"
             android:typeface="serif"
             android:text="@string/day_segment" />
@@ -195,13 +180,13 @@
                 android:id="@+id/dateDone"
                 android:layout_width="match_parent"
                 android:layout_height="20dp"
-                android:textColor="@color/teal"
-                android:gravity="top|left"
-                android:layout_gravity="top|left"
+                android:textColor="@color/black"
+                android:gravity="center|center"
+                android:layout_gravity="center|center"
                 android:layout_margin="5dp"
                 android:layout_marginBottom="2dp"
                 android:background="@color/white"
-                android:textSize="15dp"
+                android:textSize="10dp"
                 android:textStyle="normal"
                 android:typeface="serif"
                 android:text="@string/date_completed" />
@@ -210,28 +195,45 @@
                 android:id="@+id/description"
                 android:layout_width="match_parent"
                 android:layout_height="20dp"
-                android:textColor="@color/teal"
-                android:gravity="top|left"
-                android:layout_gravity="top|left"
+                android:textColor="@color/black"
+                android:gravity="center|center"
+                android:layout_gravity="center|center"
                 android:layout_margin="5dp"
                 android:layout_marginBottom="2dp"
                 android:background="@color/white"
-                android:textSize="15dp"
+                android:textSize="10dp"
                 android:textStyle="normal"
                 android:typeface="serif"
                 android:text="@string/job_description" />
 
-            <Button
+        <TextView
+            android:id="@+id/jobStatus"
+            android:layout_width="match_parent"
+            android:layout_height="20dp"
+            android:textColor="@color/black"
+            android:gravity="center|center"
+            android:layout_gravity="center|center"
+            android:layout_margin="5dp"
+            android:layout_marginBottom="2dp"
+            android:layout_marginTop="10dp"
+            android:background="@color/white"
+            android:textSize="20dp"
+            android:textStyle="normal"
+            android:typeface="serif"
+            android:text="@string/job_status" />
+
+        <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Assign"
                 android:textColor="@color/white"
-                android:background="@color/teal"
+                android:background="@color/yellow"
                 android:textSize="15dp"
                 android:textStyle="normal"
                 android:typeface="serif"
                 android:gravity="center|center"
-                android:layout_gravity="bottom|right"
+                android:layout_gravity="center|center"
+                android:layout_marginTop="5dp"
                 android:id="@+id/assign_button" />
 
             <Button
@@ -239,12 +241,13 @@
                 android:layout_height="wrap_content"
                 android:text="Close"
                 android:textColor="@color/white"
-                android:background="@color/teal"
+                android:background="@color/yellow"
                 android:textSize="15dp"
                 android:textStyle="normal"
                 android:typeface="serif"
                 android:gravity="center|center"
-                android:layout_gravity="bottom|right"
+                android:layout_gravity="center|center"
+                android:layout_marginTop="5dp"
                 android:id="@+id/close_button" />
 
     </LinearLayout>
