--- a/app/src/main/res/layout-v20/activity_job_list.xml
+++ b/app/src/main/res/layout-v20/activity_job_list.xml
@@ -69,7 +69,7 @@
         android:elevation="100dp"
         android:text="Post New Job"
         android:textColor="@color/white"
-        android:background="@color/teal"
+        android:background="@color/yellow"
         android:textSize="15sp"
         android:textStyle="normal"
         android:typeface="serif"
