--- a/app/src/main/res/layout-v20/custom_job_list.xml
+++ b/app/src/main/res/layout-v20/custom_job_list.xml
@@ -8,7 +8,7 @@
         android:id="@+id/jobs"
         android:layout_width="wrap_content"
         android:layout_height="70dp"
-        android:divider="#008080"
+        android:divider="@color/blue"
         android:dividerHeight="4dp"
         android:elevation="50dp"
         android:background="@drawable/white_linen_paper_texture" />
