--- a/app/src/main/res/layout/custom_job_list.xml
+++ b/app/src/main/res/layout/custom_job_list.xml
@@ -9,7 +9,7 @@
         android:id="@+id/jobs"
         android:layout_width="wrap_content"
         android:layout_height="70dp"
-        android:divider="#008080"
+        android:divider="@color/blue"
         android:dividerHeight="4dp"
         android:layout_gravity="top"
         android:gravity="top|center"
