--- a/app/src/main/res/layout/fragment_job_detail.xml
+++ b/app/src/main/res/layout/fragment_job_detail.xml
@@ -26,13 +26,13 @@
             android:id="@+id/jobId"
             android:layout_width="match_parent"
             android:layout_height="20dp"
-            android:textColor="@color/teal"
-            android:gravity="top|left"
-            android:layout_gravity="top|left"
+            android:textColor="@color/black"
+            android:gravity="center|center"
+            android:layout_gravity="center|center"
             android:layout_margin="5dp"
             android:layout_marginBottom="2dp"
             android:background="@color/white"
-            android:textSize="15dp"
+            android:textSize="10dp"
             android:textStyle="normal"
             android:typeface="serif"
             android:text="@string/job_id" />
@@ -41,31 +41,17 @@
             android:id="@+id/jobType"
             android:layout_width="match_parent"
             android:layout_height="20dp"
-            android:textColor="@color/teal"
-            android:gravity="top|left"
-            android:layout_gravity="top|left"
+            android:textColor="@color/black"
+            android:gravity="center|center"
+            android:layout_gravity="center|center"
             android:layout_margin="5dp"
             android:layout_marginBottom="2dp"
             android:background="@color/white"
-            android:textSize="15dp"
+            android:textSize="10dp"
             android:textStyle="normal"
             android:typeface="serif"
             android:text="@string/job_type" />
 
-        <TextView
-            android:id="@+id/jobStatus"
-            android:layout_width="match_parent"
-            android:layout_height="20dp"
-            android:textColor="@color/teal"
-            android:gravity="top|left"
-            android:layout_gravity="top|left"
-            android:layout_margin="5dp"
-            android:layout_marginBottom="2dp"
-            android:background="@color/white"
-            android:textSize="15dp"
-            android:textStyle="normal"
-            android:typeface="serif"
-            android:text="@string/job_status" />
 
         <!--
         <TextView
@@ -78,7 +64,7 @@
             android:layout_margin="5dp"
             android:layout_marginBottom="2dp"
             android:background="@color/white"
-            android:textSize="15dp"
+            android:textSize="10dp"
             android:textStyle="normal"
             android:typeface="serif"
             android:text="@string/customer_name" />
@@ -93,7 +79,7 @@
             android:layout_margin="5dp"
             android:layout_marginBottom="2dp"
             android:background="@color/white"
-            android:textSize="15dp"
+            android:textSize="10dp"
             android:textStyle="normal"
             android:typeface="serif"
             android:text="@string/customer_phone_number" />
@@ -104,13 +90,13 @@
             android:id="@+id/serviceproviderName"
             android:layout_width="match_parent"
             android:layout_height="20dp"
-            android:textColor="@color/teal"
-            android:gravity="top|left"
-            android:layout_gravity="top|left"
+            android:textColor="@color/black"
+            android:gravity="center|center"
+            android:layout_gravity="center|center"
             android:layout_margin="5dp"
             android:layout_marginBottom="2dp"
             android:background="@color/white"
-            android:textSize="15dp"
+            android:textSize="10dp"
             android:textStyle="normal"
             android:typeface="serif"
             android:text="@string/service_provider_name" />
@@ -119,13 +105,13 @@
             android:id="@+id/serviceProviderMobileNumber"
             android:layout_width="match_parent"
             android:layout_height="20dp"
-            android:textColor="@color/teal"
-            android:gravity="top|left"
-            android:layout_gravity="top|left"
+            android:textColor="@color/black"
+            android:gravity="center|center"
+            android:layout_gravity="center|center"
             android:layout_margin="5dp"
             android:layout_marginBottom="2dp"
             android:background="@color/white"
-            android:textSize="15dp"
+            android:textSize="10dp"
             android:textStyle="normal"
             android:typeface="serif"
             android:text="@string/service_provider_phone" />
@@ -134,13 +120,13 @@
             android:id="@+id/pincode"
             android:layout_width="match_parent"
             android:layout_height="20dp"
-            android:textColor="@color/teal"
-            android:gravity="top|left"
-            android:layout_gravity="top|left"
+            android:textColor="@color/black"
+            android:gravity="center|center"
+            android:layout_gravity="center|center"
             android:layout_margin="5dp"
             android:layout_marginBottom="2dp"
             android:background="@color/white"
-            android:textSize="15dp"
+            android:textSize="10dp"
             android:textStyle="normal"
             android:typeface="serif"
             android:text="@string/pincode" />
@@ -149,13 +135,13 @@
             android:id="@+id/customer_preferred_date"
             android:layout_width="match_parent"
             android:layout_height="20dp"
-            android:textColor="@color/teal"
-            android:gravity="top|left"
-            android:layout_gravity="top|left"
+            android:textColor="@color/black"
+            android:gravity="center|center"
+            android:layout_gravity="center|center"
             android:layout_margin="5dp"
             android:layout_marginBottom="2dp"
             android:background="@color/white"
-            android:textSize="15dp"
+            android:textSize="10dp"
             android:textStyle="normal"
             android:typeface="serif"
             android:text="@string/customer_preferred_date" />
@@ -164,13 +150,13 @@
             android:id="@+id/daySegment"
             android:layout_width="match_parent"
             android:layout_height="20dp"
-            android:textColor="@color/teal"
-            android:gravity="top|left"
-            android:layout_gravity="top|left"
+            android:textColor="@color/black"
+            android:gravity="center|center"
+            android:layout_gravity="center|center"
             android:layout_margin="5dp"
             android:layout_marginBottom="2dp"
             android:background="@color/white"
-            android:textSize="15dp"
+            android:textSize="10dp"
             android:textStyle="normal"
             android:typeface="serif"
             android:text="@string/day_segment" />
@@ -179,13 +165,13 @@
             android:id="@+id/dateinitiated"
             android:layout_width="match_parent"
             android:layout_height="20dp"
-            android:textColor="@color/teal"
-            android:gravity="top|left"
-            android:layout_gravity="top|left"
+            android:textColor="@color/black"
+            android:gravity="center|center"
+            android:layout_gravity="center|center"
             android:layout_margin="5dp"
             android:layout_marginBottom="2dp"
             android:background="@color/white"
-            android:textSize="15dp"
+            android:textSize="10dp"
             android:textStyle="normal"
             android:typeface="serif"
             android:text="@string/date_initiated" />
@@ -194,13 +180,13 @@
             android:id="@+id/dateDone"
             android:layout_width="match_parent"
             android:layout_height="20dp"
-            android:textColor="@color/teal"
-            android:gravity="top|left"
-            android:layout_gravity="top|left"
+            android:textColor="@color/black"
+            android:gravity="center|center"
+            android:layout_gravity="center|center"
             android:layout_margin="5dp"
             android:layout_marginBottom="2dp"
             android:background="@color/white"
-            android:textSize="15dp"
+            android:textSize="10dp"
             android:textStyle="normal"
             android:typeface="serif"
             android:text="@string/date_completed" />
@@ -209,28 +195,45 @@
             android:id="@+id/description"
             android:layout_width="match_parent"
             android:layout_height="20dp"
-            android:textColor="@color/teal"
-            android:gravity="top|left"
-            android:layout_gravity="top|left"
+            android:textColor="@color/black"
+            android:gravity="center|center"
+            android:layout_gravity="center|center"
             android:layout_margin="5dp"
             android:layout_marginBottom="2dp"
             android:background="@color/white"
-            android:textSize="15dp"
+            android:textSize="10dp"
             android:textStyle="normal"
             android:typeface="serif"
             android:text="@string/job_description" />
+
+        <TextView
+            android:id="@+id/jobStatus"
+            android:layout_width="match_parent"
+            android:layout_height="20dp"
+            android:textColor="@color/black"
+            android:gravity="center|center"
+            android:layout_gravity="center|center"
+            android:layout_margin="5dp"
+            android:layout_marginBottom="2dp"
+            android:layout_marginTop="10dp"
+            android:background="@color/white"
+            android:textSize="20dp"
+            android:textStyle="normal"
+            android:typeface="serif"
+            android:text="@string/job_status" />
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Cancel"
             android:textColor="@color/white"
-            android:background="@color/teal"
+            android:background="@color/yellow"
             android:textSize="15dp"
             android:textStyle="normal"
             android:typeface="serif"
             android:gravity="center|center"
-            android:layout_gravity="bottom|right"
+            android:layout_gravity="center|center"
+            android:layout_marginTop="5dp"
             android:id="@+id/cancel_button" />
 
 
@@ -239,12 +242,13 @@
             android:layout_height="wrap_content"
             android:text="Agree"
             android:textColor="@color/white"
-            android:background="@color/teal"
+            android:background="@color/yellow"
             android:textSize="15dp"
             android:textStyle="normal"
             android:typeface="serif"
             android:gravity="center|center"
-            android:layout_gravity="bottom|right"
+            android:layout_gravity="center|center"
+            android:layout_marginTop="5dp"
             android:id="@+id/agree_button" />
 
         <Button
@@ -252,12 +256,13 @@
             android:layout_height="wrap_content"
             android:text="Unassign"
             android:textColor="@color/white"
-            android:background="@color/teal"
+            android:background="@color/yellow"
             android:textSize="15dp"
             android:textStyle="normal"
             android:typeface="serif"
             android:gravity="center|center"
-            android:layout_gravity="bottom|right"
+            android:layout_gravity="center|center"
+            android:layout_marginTop="5dp"
             android:id="@+id/unassign_button" />
 
 
