--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,15 +1,51 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
     <!-- Base application theme.Theme.AppCompat.Light.DarkActionBar -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
+        <!-- Customize your theme here. tools:ignore="NewApi"-->
         <item name="android:actionBarStyle">@style/MyActionBar</item>
+        <item name="actionBarStyle">@style/MyActionBar</item>
+
+        <!--<item name="android:actionBarTabStyle">@style/MyActionBarTabs</item>
+        <item name="actionBarTabStyle">@style/MyActionBarTabs</item>-->
     </style>
 
-    <!-- ActionBar styles -->
+    <!-- ActionBar styles tools:ignore="NewApi"-->
     <style name="MyActionBar"
-        parent="@android:style/Widget.Holo.Light.ActionBar.Solid.Inverse">
-        <item name="android:background">@color/teal</item>
+        parent="@style/Widget.AppCompat.Light.ActionBar.Solid.Inverse">
+       <!-- <item name="android:logo">@drawable/omelee_icon</item>
+        <item name="logo">@drawable/omelee_icon</item>
+        <item name="android:icon">@drawable/omelee_icon</item>
+        <item name="icon">@drawable/omelee_icon</item>-->
+        <item name="android:title">@string/app_name</item>
+        <item name="title">@string/app_name</item>
+        <item name="background">@color/blue</item>
+        <item name="android:background" >@color/blue</item>
+        <!--<item name="displayOptions">useLogo|showHome</item>-->
     </style>
+
+    <!-- ActionBar title text -->
+    <style name="MyActionBarTitleText"
+        parent="@style/TextAppearance.AppCompat.Widget.ActionBar.Title">
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <!-- ActionBar tabs styles -->
+    <style name="MyActionBarTabs"
+        parent="@style/Widget.AppCompat.ActionBar.TabView">
+        <!-- tab indicator -->
+        <item name="background">@color/yellow</item>
+        <item name="android:background">@color/yellow</item>
+        <item name="showDividers">middle</item>
+        <item name="measureWithLargestChild">true</item>
+    </style>
+
+
+    <!-- ActionBar tabs text styles -->
+    <style name="MyActionBarTabText"
+        parent="@style/Widget.AppCompat.ActionBar.TabText">
+        <item name="android:textColor">@color/white</item>
+    </style>
+
 
 </resources>
