--- a/app/src/main/res/layout-sw600dp/activity_job_list.xml
+++ b/app/src/main/res/layout-sw600dp/activity_job_list.xml
@@ -23,12 +23,12 @@
         android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1"
         tools:layout="@android:layout/list_content" />-->
 
-    <android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
+    <!--<android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-    </android.support.v4.view.ViewPager>
+    </android.support.v4.view.ViewPager>-->
 
     <FrameLayout android:id="@+id/job_detail_container" android:layout_width="0dp"
         android:layout_height="match_parent" android:layout_weight="3" />
