--- a/app/src/main/res/layout/fragment_jobtypes.xml
+++ b/app/src/main/res/layout/fragment_jobtypes.xml
@@ -2,7 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:background="@color/white"
+    android:id="@+id/select_job_type"
     android:layout_height="match_parent">
+
 
     <!--<ImageButton
         android:layout_width="match_parent"
