--- a/app/src/main/res/layout/fragment_job_detail.xml
+++ b/app/src/main/res/layout/fragment_job_detail.xml
@@ -20,7 +20,8 @@
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:orientation="vertical" android:layout_width="match_parent"
         android:background="@color/white"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:weightSum="1">
 
         <TextView
             android:id="@+id/jobId"
@@ -177,6 +178,21 @@
             android:text="@string/date_initiated" />
 
         <TextView
+            android:id="@+id/dateStarted"
+            android:layout_width="match_parent"
+            android:layout_height="20dp"
+            android:textColor="@color/black"
+            android:gravity="center|center"
+            android:layout_gravity="center|center"
+            android:layout_margin="5dp"
+            android:layout_marginBottom="2dp"
+            android:background="@color/white"
+            android:textSize="10dp"
+            android:textStyle="normal"
+            android:typeface="serif"
+            android:text="@string/date_started" />
+
+        <TextView
             android:id="@+id/dateDone"
             android:layout_width="match_parent"
             android:layout_height="20dp"
@@ -222,48 +238,58 @@
             android:typeface="serif"
             android:text="@string/job_status" />
 
-        <Button
-            android:layout_width="wrap_content"
+
+        <FrameLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Cancel"
-            android:textColor="@color/white"
-            android:background="@color/yellow"
-            android:textSize="15dp"
-            android:textStyle="normal"
-            android:typeface="serif"
-            android:gravity="center|center"
-            android:layout_gravity="center|center"
-            android:layout_marginTop="15dp"
-            android:id="@+id/cancel_button" />
+            android:layout_gravity="center_horizontal"
+            android:background="@color/white"
+            android:layout_weight="0.20">
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Cancel"
+                android:textColor="@color/white"
+                android:background="@color/yellow"
+                android:textSize="15dp"
+                android:textStyle="normal"
+                android:typeface="serif"
+                android:gravity="center|center"
+                android:layout_gravity="center|center"
+                android:layout_marginTop="15dp"
+                android:id="@+id/cancel_button" />
 
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Agree"
-            android:textColor="@color/white"
-            android:background="@color/yellow"
-            android:textSize="15dp"
-            android:textStyle="normal"
-            android:typeface="serif"
-            android:gravity="center|center"
-            android:layout_gravity="center|center"
-            android:layout_marginTop="5dp"
-            android:id="@+id/agree_button" />
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Agree"
+                android:textColor="@color/white"
+                android:background="@color/yellow"
+                android:textSize="15dp"
+                android:textStyle="normal"
+                android:typeface="serif"
+                android:gravity="center|center"
+                android:layout_gravity="center|center"
+                android:layout_marginTop="5dp"
+                android:id="@+id/agree_button" />
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Unassign"
-            android:textColor="@color/white"
-            android:background="@color/yellow"
-            android:textSize="15dp"
-            android:textStyle="normal"
-            android:typeface="serif"
-            android:gravity="center|center"
-            android:layout_gravity="center|center"
-            android:layout_marginTop="5dp"
-            android:id="@+id/unassign_button" />
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Unassign"
+                android:textColor="@color/white"
+                android:background="@color/yellow"
+                android:textSize="15dp"
+                android:textStyle="normal"
+                android:typeface="serif"
+                android:gravity="center|center"
+                android:layout_gravity="center|center"
+                android:layout_marginTop="5dp"
+                android:id="@+id/unassign_button" />
+
+        </FrameLayout>
 
 
     </LinearLayout>
