--- a/app/src/main/res/layout/fragment_jobtypes.xml
+++ b/app/src/main/res/layout/fragment_jobtypes.xml
@@ -30,7 +30,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Plumbing"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         android:background="@color/yellow"
         android:textSize="15sp"
         android:textStyle="normal"
@@ -44,7 +44,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Electrical"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         android:background="@color/yellow"
         android:textSize="15sp"
         android:textStyle="normal"
