--- a/app/src/main/res/layout/activity_job_list.xml
+++ b/app/src/main/res/layout/activity_job_list.xml
@@ -43,7 +43,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Post New Job"
-            android:textColor="@color/white"
+            android:textColor="@color/black"
             android:background="@color/yellow"
             android:textSize="15sp"
             android:textStyle="normal"
