--- a/app/src/main/res/layout/post_job_fragment.xml
+++ b/app/src/main/res/layout/post_job_fragment.xml
@@ -140,17 +140,17 @@
 
     </RelativeLayout>
 
-
     <Button
         android:layout_width="match_parent"
-        android:layout_height="75dp"
+        android:layout_height="wrap_content"
         android:text="Post Job"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         android:background="@color/yellow"
         android:textSize="15sp"
         android:textStyle="normal"
         android:typeface="serif"
-        android:id="@+id/postJobButton" />
-
+        android:layout_gravity="center|bottom"
+        android:id="@+id/postJobButton"
+        android:layout_marginTop="150dp"/>
 
 </LinearLayout>
