--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,7 +7,9 @@
         <item name="actionBarStyle">@style/MyActionBar</item>
 
         <!--<item name="android:actionBarTabStyle">@style/MyActionBarTabs</item>
-        <item name="actionBarTabStyle">@style/MyActionBarTabs</item>-->
+         <item name="actionBarTabStyle">@style/MyActionBarTabs</item>
+         <item name="android:actionBarTabStyle">@style/MyActionBarTabText</item>
+        <item name="actionBarTabStyle">@style/MyActionBarTabText</item>-->
     </style>
 
     <!-- ActionBar styles tools:ignore="NewApi"-->
@@ -27,7 +29,7 @@
     <!-- ActionBar title text -->
     <style name="MyActionBarTitleText"
         parent="@style/TextAppearance.AppCompat.Widget.ActionBar.Title">
-        <item name="android:textColor">@color/white</item>
+        <item name="android:textColor">@color/yellow</item>
     </style>
 
     <!-- ActionBar tabs styles -->
@@ -38,13 +40,15 @@
         <item name="android:background">@color/yellow</item>
         <item name="showDividers">middle</item>
         <item name="measureWithLargestChild">true</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">16sp</item>
     </style>
 
 
     <!-- ActionBar tabs text styles -->
     <style name="MyActionBarTabText"
         parent="@style/Widget.AppCompat.ActionBar.TabText">
-        <item name="android:textColor">@color/white</item>
+        <item name="android:textColor">@color/black</item>
     </style>
 
 
