--- a/app/src/main/res/layout/fragment_job_detail.xml
+++ b/app/src/main/res/layout/fragment_job_detail.xml
@@ -250,7 +250,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Cancel"
-                android:textColor="@color/white"
+                android:textColor="@color/black"
                 android:background="@color/yellow"
                 android:textSize="15dp"
                 android:textStyle="normal"
@@ -265,7 +265,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Agree"
-                android:textColor="@color/white"
+                android:textColor="@color/black"
                 android:background="@color/yellow"
                 android:textSize="15dp"
                 android:textStyle="normal"
@@ -280,7 +280,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Unassign"
-                android:textColor="@color/white"
+                android:textColor="@color/black"
                 android:background="@color/yellow"
                 android:textSize="15dp"
                 android:textStyle="normal"
