--- a/app/src/main/res/layout/sp_fragment_job_detail.xml
+++ b/app/src/main/res/layout/sp_fragment_job_detail.xml
@@ -248,7 +248,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Assign"
-                android:textColor="@color/white"
+                android:textColor="@color/black"
                 android:background="@color/yellow"
                 android:textSize="15dp"
                 android:textStyle="normal"
@@ -262,7 +262,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Start"
-                android:textColor="@color/white"
+                android:textColor="@color/black"
                 android:background="@color/yellow"
                 android:textSize="15dp"
                 android:textStyle="normal"
@@ -276,7 +276,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Close"
-                android:textColor="@color/white"
+                android:textColor="@color/black"
                 android:background="@color/yellow"
                 android:textSize="15dp"
                 android:textStyle="normal"
@@ -292,7 +292,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Bill"
-                android:textColor="@color/white"
+                android:textColor="@color/black"
                 android:background="@color/yellow"
                 android:textSize="15dp"
                 android:textStyle="normal"
