Fixing Closed jobs display, Service provider action bar:
1. Closed jobs would not be displayed anymore
2. Service provider's action bar width is fixed

--- a/app/src/main/res/layout/activity_job_list.xml
+++ b/app/src/main/res/layout/activity_job_list.xml
@@ -46,7 +46,7 @@
             android:textColor="@color/black"
             android:background="@color/yellow"
             android:textSize="15sp"
-            android:textStyle="normal"
+            android:textStyle="bold"
             android:typeface="serif"
             android:gravity="center|center"
             android:layout_gravity="bottom"
